crates/puffin-cli/tests/snapshots/pip_sync__install_git_commit.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
    - "--cache-dir"
    - /tmp/.tmpb2Pc8c
  env:
    VIRTUAL_ENV: /tmp/.tmppqX5jj/.venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 1 package in [TIME]
Downloaded 1 package and built 1 package in [TIME]
Unzipped 1 package in [TIME]
Installed 1 package in [TIME]
 + werkzeug @ git+https://github.com/pallets/werkzeug.git@af160e0b6b7ddd81c22f1652c728ff5ac72d5c74

