crates/puffin-cli/tests/snapshots/pip_sync__install_local_source_distribution.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
    - "--cache-dir"
    - /tmp/.tmpDtt5CR
  env:
    VIRTUAL_ENV: /tmp/.tmpIdibkL/.venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 1 package in [TIME]
Downloaded 1 package and built 1 package in [TIME]
Unzipped 1 package in [TIME]
Installed 1 package in [TIME]
 + flask @ file://[TEMP_DIR]/flask-3.0.0.tar.gz

